--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ plugins {
 }
 
 group 'com.bloxbean'
-version '0.1.0'
+version '0.1.0-beta'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
