--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -259,6 +259,12 @@
         <action id="com.bloxbean.algodea.idea.transaction.action.TransferAction" class="com.bloxbean.algodea.idea.transaction.action.TransferAction" text="Transfer"
                 description="Transfer Algo">
             <add-to-group group-id="com.bloxbean.algodea.idea.core.action.AlgoActionGroup"
+                          relative-to-action="com.bloxbean.algodea.idea.atomic.action.AtomicTransferAction" anchor="before"/>
+        </action>
+
+        <action id="com.bloxbean.algodea.idea.atomic.action.AtomicTransferAction" class="com.bloxbean.algodea.idea.atomic.action.AtomicTransferAction" text="Atomic Transfer"
+                description="Transfer Algo">
+            <add-to-group group-id="com.bloxbean.algodea.idea.core.action.AlgoActionGroup"
                           relative-to-action="com.bloxbean.algodea.idea.pkg.action.PkgJsonReloadAction" anchor="before"/>
         </action>
 
