--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,12 +14,6 @@
 
 <!--    <depends optional="true" config-file="python.xml">com.intellij.modules.python</depends>-->
 
-    <project-components>
-        <component>
-            <implementation-class>com.bloxbean.algodea.idea.core.service.AlgoCacheService</implementation-class>
-        </component>
-    </project-components>
-
     <extensions defaultExtensionNs="com.intellij">
 <!--        <sdkType implementation="com.bloxbean.algorand.idea.module.sdk.AlgoSdkType"/>-->
 
@@ -88,6 +82,7 @@
         <applicationService serviceImplementation="com.bloxbean.algodea.idea.configuration.service.AlgoLocalSDKState"/>
         <applicationService serviceImplementation="com.bloxbean.algodea.idea.assets.service.AssetCacheService"/>
         <projectService serviceImplementation="com.bloxbean.algodea.idea.configuration.service.AlgoProjectState"/>
+        <projectService serviceImplementation="com.bloxbean.algodea.idea.core.service.AlgoCacheService"/>
     </extensions>
     <actions>
         <action id="Algorand.NewTEALFile" class="com.bloxbean.algodea.idea.core.action.NewTEALFileAction"
