--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ plugins {
 }
 
 group 'com.bloxbean'
-version '0.2.0-beta1'
+version '0.2.0'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
