--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,11 @@ plugins {
     id 'java'
     id 'idea'
     id 'org.jetbrains.intellij' version '0.6.5'
+    id "org.jetbrains.kotlin.jvm" version "1.4.10"
 }
+
+apply plugin: "kotlin"
+apply plugin: "org.jetbrains.intellij"
 
 group 'com.bloxbean'
 version '0.3.0'
@@ -36,9 +40,18 @@ repositories {
     mavenCentral()
 }
 
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'lib')
     compile group: 'com.algorand', name: 'algosdk', version: '1.5.1'
+
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.10")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
