--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -153,6 +153,14 @@
             <keyboard-shortcut keymap="$default" first-keystroke="shift ctrl T" second-keystroke="U"/>
             <!--            <add-to-group group-id="com.bloxbean.algodea.idea.core.action.AlgoActionGroup"/>-->
         </action>
+        <action id="com.bloxbean.algodea.idea.stateless.action.LogicSigOptInAssetTransactionAction_ProjectView" class="com.bloxbean.algodea.idea.stateless.action.LogicSigOptInAssetTransactionFileNodeAction"
+                text="Opt-In Asset (Logic Sig)"
+                popup="true"
+                description="Opt-In Asset (Logic Sig)">
+            <add-to-group group-id="ProjectViewPopupMenu" relative-to-action="com.bloxbean.algodea.idea.core.action.AlgoActionGroup"  anchor="before"/>
+            <keyboard-shortcut keymap="$default" first-keystroke="shift ctrl T" second-keystroke="W"/>
+            <!--            <add-to-group group-id="com.bloxbean.algodea.idea.core.action.AlgoActionGroup"/>-->
+        </action>
         <!-- Stateless contract actions -->
         <action id="com.bloxbean.algodea.idea.stateless.action.LogicSigGenerateAction" class="com.bloxbean.algodea.idea.stateless.action.LogicSigGenerateAction"
                 text="Generate Logic Sig"
@@ -172,6 +180,12 @@
                 text="Send Transaction (Logic Sig)"
                 description="Send Transaction(Logic Sig)">
             <keyboard-shortcut keymap="$default" first-keystroke="shift ctrl T" second-keystroke="T"/>
+            <add-to-group group-id="AlgoActionGroup.StatelessContract"/>
+        </action>
+        <action id="com.bloxbean.algodea.idea.stateless.action.LogicSigOptInAssetTransactionAction" class="com.bloxbean.algodea.idea.stateless.action.LogicSigOptInAssetTransactionAction"
+                text="Opt-In Asset (Logic Sig)"
+                description="Opt-In Asset (Logic Sig)">
+            <keyboard-shortcut keymap="$default" first-keystroke="shift ctrl T" second-keystroke="V"/>
             <add-to-group group-id="AlgoActionGroup.StatelessContract"/>
         </action>
         <!-- Stateless contract actions end here -->
