#18 OptIn Asset transaction support using TEAL file

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -163,9 +163,15 @@
         </action>
         <!-- Stateless contract actions -->
         <action id="com.bloxbean.algodea.idea.stateless.action.TEALSendTransactionAction" class="com.bloxbean.algodea.idea.stateless.action.TEALSendTransactionAction"
-                text="Send Transaction Using TEAL"
+                text="Send Transaction (TEAL File)"
                 description="Send Transaction Using TEAL">
             <keyboard-shortcut keymap="$default" first-keystroke="shift ctrl T" second-keystroke="S"/>
+            <add-to-group group-id="AlgoActionGroup.StatelessContract"/>
+        </action>
+        <action id="com.bloxbean.algodea.idea.stateless.action.TEALOptInTransactionAction" class="com.bloxbean.algodea.idea.stateless.action.TEALOptInTransactionAction"
+                text="Opt-In Asset (TEAL File)"
+                description="Opt-In Asset Using TEAL">
+            <keyboard-shortcut keymap="$default" first-keystroke="shift ctrl T" second-keystroke="O"/>
             <add-to-group group-id="AlgoActionGroup.StatelessContract"/>
         </action>
         <action id="com.bloxbean.algodea.idea.stateless.action.LogicSigGenerateAction" class="com.bloxbean.algodea.idea.stateless.action.LogicSigGenerateAction"
