--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ apply plugin: "kotlin"
 apply plugin: "org.jetbrains.intellij"
 
 group 'com.bloxbean'
-version '0.4.2'
+version '0.5.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -49,7 +49,7 @@ compileTestKotlin {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'lib')
-    compile group: 'com.algorand', name: 'algosdk', version: '1.5.1'
+    compile group: 'com.algorand', name: 'algosdk', version: '1.7.0'
 
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.10")
     testCompile group: 'junit', name: 'junit', version: '4.12'
