--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -35,6 +35,7 @@
 
         <lang.commenter language="TEAL" implementationClass="com.bloxbean.algodea.idea.language.TEALProgramCommenter"/>
 
+        <annotator language="TEAL" implementationClass="com.bloxbean.algodea.idea.language.annotator.TEALV3OpCodeAnnotator"/>
         <!-- module extensions -->
         <moduleType id="Algorand_Module" implementationClass="com.bloxbean.algodea.idea.module.AlgorandModuleType"/>
 <!--        <facetType implementation="com.bloxbean.algorand.idea.module.facet.AlgoFacetType"/>-->
