TEAL V3 fields annotator to highlight use of V3 fields in v2 files

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -36,6 +36,7 @@
         <lang.commenter language="TEAL" implementationClass="com.bloxbean.algodea.idea.language.TEALProgramCommenter"/>
 
         <annotator language="TEAL" implementationClass="com.bloxbean.algodea.idea.language.annotator.TEALV3OpCodeAnnotator"/>
+        <annotator language="TEAL" implementationClass="com.bloxbean.algodea.idea.language.annotator.TEALV3FieldsAnnotator"/>
         <!-- module extensions -->
         <moduleType id="Algorand_Module" implementationClass="com.bloxbean.algodea.idea.module.AlgorandModuleType"/>
 <!--        <facetType implementation="com.bloxbean.algorand.idea.module.facet.AlgoFacetType"/>-->
