--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -39,6 +39,8 @@
         <annotator language="TEAL" implementationClass="com.bloxbean.algodea.idea.language.annotator.TEALV3FieldsAnnotator"/>
 
         <annotator language="TEAL" implementationClass="com.bloxbean.algodea.idea.language.annotator.TEALV4OpCodeAnnotator"/>
+        <lang.psiStructureViewFactory language="TEAL"
+                                      implementationClass="com.bloxbean.algodea.idea.language.structureview.TEALStructureViewFactory"/>
         <!-- module extensions -->
         <moduleType id="Algorand_Module" implementationClass="com.bloxbean.algodea.idea.module.AlgorandModuleType"/>
 <!--        <facetType implementation="com.bloxbean.algorand.idea.module.facet.AlgoFacetType"/>-->
