--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -36,7 +36,7 @@
         <lang.commenter language="TEAL" implementationClass="com.bloxbean.algodea.idea.language.TEALProgramCommenter"/>
 
         <annotator language="TEAL" implementationClass="com.bloxbean.algodea.idea.language.annotator.TEALV3OpCodeAnnotator"/>
-        <annotator language="TEAL" implementationClass="com.bloxbean.algodea.idea.language.annotator.TEALV3FieldsAnnotator"/>
+        <annotator language="TEAL" implementationClass="com.bloxbean.algodea.idea.language.annotator.TEALFieldsAnnotator"/>
 
         <annotator language="TEAL" implementationClass="com.bloxbean.algodea.idea.language.annotator.TEALV4OpCodeAnnotator"/>
         <lang.psiStructureViewFactory language="TEAL"
