--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ compileTestKotlin {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'lib')
     compile group: 'com.algorand', name: 'algosdk', version: '1.7.0'
+    compile('com.github.kklisura.cdt:cdt-java-client:4.0.0')  {
+        exclude group: 'org.slf4j', module: 'slf4j-api'
+    }
 
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.10")
     testCompile group: 'junit', name: 'junit', version: '4.12'
