--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ apply plugin: "kotlin"
 apply plugin: "org.jetbrains.intellij"
 
 group 'com.bloxbean'
-version '0.7.0'
+version '0.8.0-beta'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -49,7 +49,7 @@ compileTestKotlin {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'lib')
-    compile group: 'com.algorand', name: 'algosdk', version: '1.8.0'
+    compile group: 'com.algorand', name: 'algosdk', version: '1.9.0'
     compile('com.github.kklisura.cdt:cdt-java-client:4.0.0')  {
         exclude group: 'org.slf4j', module: 'slf4j-api'
     }
