--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ apply plugin: "kotlin"
 apply plugin: "org.jetbrains.intellij"
 
 group 'com.bloxbean'
-version '0.8.0-beta'
+version '0.8.0'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
